...
                            .playgroundPhysicsBody(
                                enabled = enablePhysics,
                                id = DROP_BUTTON_A_ID,
                                effect = DROP_BUTTON_EFFECT_A,
                            ),
                    ) {
                        Text(text = "Drop A")
                    }

                    Button(
                        onClick = { onDropClick(DROP_BUTTON_B_ID) },
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.tertiary,
...

                Row(horizontalArrangement = Arrangement.spacedBy(12.dp)) {
                    OutlinedButton(
                        onClick = { onRespawnClick(DROP_BUTTON_A_ID) },
                        modifier = Modifier.size(width = 164.dp, height = 44.dp),
                    ) {
                        Text(text = "Respawn A")
                    }

                    OutlinedButton(
                        onClick = { onRespawnClick(DROP_BUTTON_B_ID) },
                        modifier = Modifier.size(width = 164.dp, height = 44.dp),
                    ) {
...
